# rust-sports

./: .gitignore  .rustfmt.toml  Cargo.toml  rustfmt.toml
codejam/: Cargo.toml
codejam/src/: main.rs
codewars/: Cargo.toml
codewars/src/: binomial_expansion.rs  boolfuck.rs  format_duration.rs  lib.rs  mexican_wave.rs  n_linear.rs  power_tower_podulo.rs  printer_errors.rs  rail_fence_cipher.rs  regular_expression_parser.rs  simple_assembler.rs  split_strings.rs  sum_of_pairs.rs  twice_linear.rs  which_are_in.rs
data/: Cargo.toml
data/src/: boxed.rs  combinations.rs  ignore.rs  leetcode.rs  lib.rs  neighbors.rs  suffix.rs
euler/: Cargo.toml
euler/src/: lib.rs  p310.rs  prisoners.rs
facebook/: Cargo.toml  runway_out.txt
facebook/src/: a.rs  b.rs  err.rs  main.rs
leetold/: Cargo.toml
leetold/src/: lib.rs
src/: .rustfmt.toml  lib.rs  main.rs
src/algo/: mod.rs  radix_sort.rs
src/codejam/: mod.rs
src/codewars/: backspaces_in_string.rs  common_denominators.rs  dibisibility_by_13.rs  encrypt_this.rs  good_vs_evil.rs  mod.rs  next_bigger_number.rs  nonogram_solver.rs  nums_of_people_in_the_bus.rs  product_of_conseq_fib.rs  stop_gninnips.rs
src/data/: combinations.rs  du.rs  fenwick.rs  ignore.rs  kmp.rs  mod.rs  modnum.rs  range_calc.rs  segpos.rs  suffix.rs  tree23.rs
src/leetcode/: bw38.rs  challenge.rs  data.rs  haystack.rs  interview.rs  meds.rs  mod.rs  random.rs  sum_3.rs  two_sums.rs
src/playground/: C(F[A], B) ~ D(A, G[B]) = C(G[B], A).hs  all_possible_full_binary_trees.rs  borrows.rs  chatt.rs  cloneable_dyn.rs  coercible.rs  count_integers_in_intervals.rs  dll.rs  dont_join_threads.rs  duplicate_prefixes.rs  enum_unsidpatch.rs  fib.rs  fn_inference.rs  forget_me.rs  if_elsif_counter.rs  init.rs  linked_list.rs  macro_tests.rs  match_drop.rs  match_fallthrough.rs  mem_align.rs  mod.rs  mops.rs  pi.rs  (+7 more)
(+412 files in other folders)
