[package]
name = "sports"
version = "0.1.0"
authors = ["Oleg Nizhnik <odomontois@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
lazy_static = "1.4.0"
itertools = "0.10.0"
data = {path = "data"}
either = "1.6.1"
enum_dispatch = "0.3.12"
paste = "1.0.14"

[workspace]
members=["codejam", "codewars", "leetold", "data", "facebook", "euler"]