[package]
name = "codewars"
version = "0.1.0"
authors = ["Oleg Nizhnik <odomontois@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
lazy_static = "1.4.0"
itertools = "0.10.3"
regex = "1.5.5"
num = { version = "0.4.0", features = ["rand"] }
